--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+/*this hiddes the scrollbar on desktop mode
+    TODO: Check if there is a better solucion for this issue
+*/
+*::-webkit-scrollbar {
+    width: 1px;
+  }
+  
+
+
+  
