master - Initial website mocks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <ng-container>
     <app-toolbar></app-toolbar>
 
-    <!-- <app-info-card-container></app-info-card-container> -->
-    <router-outlet></router-outlet>
+    <div id="margins">
+        <router-outlet ></router-outlet>
+    </div>
+   
 
-    <!-- <app-footer></app-footer> -->
+    <app-footer></app-footer> 
 </ng-container>
