--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -15,9 +15,9 @@
       <span class="example-spacer"></span>
       <div>
         <a mat-button routerLink="/">Bienvenidos</a>
-        <a mat-button routerLink="/prices">Volá con nosotros</a>
-        <a mat-button routerLink="/glider">Planeadores</a>
-        <a mat-button routerLink="/contact">Contactenos</a>
+        <a mat-button routerLink="/vuelos">Volá con nosotros</a>
+        <a mat-button routerLink="/planeadores">Planeadores</a>
+        <a mat-button routerLink="/contactenos">Contactenos</a>
       </div>
   
     </mat-toolbar>
