--- a/src/app/glider/glider.component.html
+++ b/src/app/glider/glider.component.html
@@ -1,48 +1,27 @@
 <ng-container>
     <app-glider-sidenav [gliderArray]="gliderArray"></app-glider-sidenav>
     <mat-card>    
-    PLANEADOR IS28 B2 - LV-ERJ
-    El planeador IS 28 B2 LV-ERJ fue comprado en el año 2011 al Club Planeadores Bolivar. Desde entonces este planeador lo vuelan pilotos socios del Club Planeadores Bariloche, si bien ha sido afectado principalmente a la instrucción de alumnos pilotos, también se utiliza para vuelo de entrenamiento y para sacar de vuelos de bautismo.
-    planois28b2
-    <img mat-card-image src={{image}} alt="Card image" onError="this.src='https://dummyimage.com/600x400'"/>
-    fm201112
-    lverj5
-    Manuales
-    Manual de vuelo
-    Manual de vuelo (suplementos)
-    Flight and maintenance manual
-    IMPORTANTE
-    Antes de volar el planeador por primera vez, o si el piloto no se encuentra familiarizado con esta aeronave, recomendamos leer el manual de vuelo que puede descargar desde esta página o que encontrará impreso arriba del planeador, tomarse unos minutos para hacer  cabina y sacarse cualquier duda con un  Instructor del Club. Recalcamos la importancia para el piloto de conocer las condiciones de vuelo, límites de la aeronave y estar plenamente familiarizado con los controles, instrumentos y otros elementos de la cabina antes de emprender vuelo.
-    Datos generales:
-    Origen: República de Rumania.
-    Fabricante: Intreprinderea de Constructii Aeronautice (ICA) Brasov
-    Construcción: Biplaza doble comando, ala media, cola en "T", totalmente metálico, alas monolargero
-    Características:
-    Número de plazas: 2
-    Envergadura: 17.00 m
-    Largo fuselaje: 8.72 m
-    Superficie alar: 18.24 m2
-    Diedro: 2.5 °
-    Cuerda de raiz: 1.46 m
-    Cuerda de extremo: 0.65 m
-    Cuerda media: 1.13 m
-    Perfil alar: FX-61-163 raiz y 60-126 extremo marginal
-    Flaps: Posición neutral (0°), 3 puntos flap positivos (5°, 10° y 15°) y 1 punto flap negativo (-5°)
-    Superficie alerones: 2.56 m2
-    Superficie empenaje: Estabilizador horizontal: 1.37 m2, elevador 1.36 m2, estabilizador vertical: 0.68 m2, timón de dirección 0.81 m2
-    Tipo frenos aerodinámicos: Lado superior e inferior alas
-    Tren de aterrizaje: Medio retractable, amortiguación aire-aceite y rueda de cola.
-    Peso vacío: 400 kg
-    Peso máximo: 590 kg
-    Pérformance:
-    Relación óptima de planeo: 1:34 a 94 Km/h
-    Velocidad mínima de descenso: 0.76 m/seg
-    Velocidad pérdida sin flaps y peso máximo: 70 km/h
-    Velocidad pérdida en configuración aterrizaje: 65 km/h
-    Velocidad máxima (VNE): 230 km/h
-    Velocidad máxima con aire turbulento: 165 km/h
-    Velocidad máxima con flap todo abajo: 130 km/h
+        <h1>
+            {{glider.gliderMaker}} -
+            {{glider.gliderDesignator}}
+        </h1>
+    <img mat-card-image src={{glider.photoFilename}} alt="Card image" onError="this.src='https://dummyimage.com/600x400'"/>
+    
+    <h2>{{shortDescription}}</h2>
+    <p>{{longDescription}}</p>
 
+    <mat-card>
+        <h2>Manuales</h2>
+
+        <button mat-button>Manual de vuelo</button>
+        <button mat-button>Manual de Mantenimiento</button>
+
+    <h2>Adicionales</h2>
+
+    <button mat-button>Manual de repuestos</button>
+    
     </mat-card>
+   
+  </mat-card>
 
 </ng-container>
