--- a/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.html
+++ b/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.html
@@ -2,7 +2,7 @@
     <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'"
             [fixedInViewport]="mobileQuery.matches" fixedTopGap="56" [opened]="!mobileQuery.matches">
             <mat-nav-list>
-                    <a mat-list-item  routerLink="/glider/{{glider.gliderDesignator}}"
+                    <a mat-list-item  routerLink="/planeadores/{{glider.gliderDesignator}}"
                             *ngFor="let glider of gliderArray">{{glider.gliderMaker}} -
                             {{glider.gliderDesignator}}</a>
             </mat-nav-list>
