--- a/src/app/pages/gliders/info-card/info-card.component.html
+++ b/src/app/pages/gliders/info-card/info-card.component.html
@@ -1,4 +1,4 @@
-<mat-card onmouseover="this.style.background='LightGray';" onmouseout="this.style.background='white';"  routerLink="/glider/{{subtitle}}">
+<mat-card onmouseover="this.style.background='LightGray';" onmouseout="this.style.background='white';"  routerLink="/planeadores/{{subtitle}}">
         <img mat-card-image src={{image}} alt="Card image" onError="this.src='https://dummyimage.com/600x400'"/>
         <mat-card-title>{{title}}</mat-card-title>
         <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
