--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,6 +1,6 @@
 Club de Planeadores Tandil
 
-<img mat-card-image src='/assets/logocpt.jpg' alt="Card image" onError="this.src='https://dummyimage.com/600x400'"/>
+<img mat-card-image src='./assets/logocpt.jpg' alt="Card image" onError="this.src='https://dummyimage.com/600x400'"/>
 
 <div class="container">
 <p>El Club de Planeadores Tandil nace el 12 de junio de 1936 gracias al esfuerzo y la unión de un grupo de entusiastas aeronáuticos liderados por Carlos Islas y Ludovico Ots. poco después ingresaron Roberto Madsen y su hermano José, quienes impulsaron la construcción de varios planeadores en su taller.</p>
