--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,3 +1,14 @@
+mat-card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    img{
+        width: 20vw;
+
+    }
+}
+
 div.container p {
     font-family: Arial;
     font-size: 14px;
