--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,21 +1,20 @@
-mat-card{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 10px;
-    img{
-        width: 20vw;
-
-    }
+p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 120%;
+}
+mat-grid-tile {
+  background: lightblue;
 }
 
-div.container p {
-    font-family: Arial;
-    font-size: 14px;
-    font-style: normal;
-    font-weight: normal;
-    text-decoration: none;
-    text-transform: none;
-    color: #000000;
-    background-color: #ffffff;
-    }
+.title{
+    font-family: fantasy;
+    font-size: 4vw;
+}
+
+.display-flex{
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    align-content: space-around;
+    flex-wrap: nowrap;
+}
