master - more code

--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -1,4 +1,26 @@
 <mat-card>
+    <mat-card>
+        <h2>Documentacion para pilotos</h2>
+        <a href='https://www.argentina.gob.ar/sites/default/files/manual-de-instruccion-de-vuelo-a-vela-1.pdf'
+            mat-menu-item>
+            Manual de Instrucción
+            de Vuelo a Vela - Favav </a>
+        <a href='./assets/docs/Reglamento de Vuelo CPT.pdf'
+        mat-menu-item>
+        Reglamento de vuelo club de planeadores Tandil</a>
+        <a href='./assets/docs/TABLA DE CONVERSION.pdf'
+        mat-menu-item>
+        Tabla de conversion horas</a>
+        <a href='./assets/docs/instrucciones libreta.pdf'
+        mat-menu-item>
+        Instrucciones Libreta</a>
+    </mat-card>
+
+</mat-card>
+<mat-card>
+
+    <h2>Vuelos Bautismo</h2>
+
     <p> Los vuelos de bautismo se realizan los sábados, domingos y feriados ( se abona en efectivo o por transferencia).
         No hace falta reservar, solo tenés que acercarte al club a partir de las 14 hs, es por orden de llegada!
     </p>
