--- a/src/app/pages/gliders/glider/glider.component.html
+++ b/src/app/pages/gliders/glider/glider.component.html
@@ -5,7 +5,7 @@
             {{glider.description}} -
             {{glider.designator}}
         </h1>
-        <img mat-card-image src={{glider.image}} alt="Card image" onError="this.src='https://dummyimage.com/600x400'" />
+        <img mat-card-image src={{glider.image}} alt="Card image" onError="this.src='./assets/logo.png'" />
 
         <h1> {{glider.description}}</h1>
 
