--- a/src/app/pages/gliders/info-card/info-card.component.html
+++ b/src/app/pages/gliders/info-card/info-card.component.html
@@ -1,5 +1,5 @@
 <mat-card onmouseover="this.style.background='LightGray';" onmouseout="this.style.background='white';"  routerLink="/planeadores/{{subtitle}}">
-        <img mat-card-image src={{image}} alt="Card image" onError="this.src='https://dummyimage.com/600x400'"/>
+        <img mat-card-image src={{image}} alt="Card image" onError="this.src='./assets/logo.png'"/>
         <mat-card-title>{{title}}</mat-card-title>
         <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
 </mat-card>
