--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -15,9 +15,8 @@
   
   <div class="hide-display-mobile text">
     <a mat-button routerLink="/">Bienvenidos</a>
-    <a mat-button routerLink="/vuelos">Volá con nosotros</a>
+    <a mat-button routerLink="/vuelos">Institucional</a>
     <a mat-button routerLink="/planeadores">Planeadores</a>
-    <a mat-button routerLink="/contactenos">Contactenos</a>
   </div>
   
 </mat-toolbar>
