master - more code

--- a/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.css
+++ b/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.css
@@ -1,8 +1,9 @@
 .container {
     float: left;
     width: fit-content;
-    height: 100vh;
+    height: 95vh;
     margin-right: 15px;
+    z-index: 0;
 }
 
 .scroller {
