--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -3,9 +3,8 @@
   <mat-icon>menu</mat-icon></button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item routerLink="/">Bienvenidos</button>
-    <button mat-menu-item routerLink="/vuelos">Volá con nosotros</button>
+    <button mat-menu-item routerLink="/informacion">Informacion</button>
     <button mat-menu-item routerLink="/planeadores">Planeadores</button>
-    <button mat-menu-item routerLink="/contactenos">Contactenos</button>
   </mat-menu>
     
   <a mat-button class="buttonName text" routerLink="/">
@@ -15,7 +14,7 @@
   
   <div class="hide-display-mobile text">
     <a mat-button routerLink="/">Bienvenidos</a>
-    <a mat-button routerLink="/vuelos">Institucional</a>
+    <a mat-button routerLink="/informacion">Informacion</a>
     <a mat-button routerLink="/planeadores">Planeadores</a>
   </div>
   
