master - more code

--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -5,13 +5,13 @@
             mat-menu-item>
             Manual de Instrucción
             de Vuelo a Vela - Favav </a>
-        <a href='./assets/docs/Reglamento de Vuelo CPT.pdf'
+        <a href='https://drive.google.com/file/d/1dYa1O2nQL5PW4fUpBOrzSwkQoMTY0Dxz/view?usp=drive_link'
         mat-menu-item>
         Reglamento de vuelo club de planeadores Tandil</a>
-        <a href='./assets/docs/TABLA DE CONVERSION.pdf'
+        <a href='https://drive.google.com/file/d/1qhckW0RjmD82cZaAHIYfyODImj2PlNRF/view?usp=drive_link'
         mat-menu-item>
         Tabla de conversion horas</a>
-        <a href='./assets/docs/instrucciones libreta.pdf'
+        <a href='https://drive.google.com/file/d/1LYlIs--LPWiA-SaU9Jk6SF5Rc5FyVn1x/view?usp=drive_link'
         mat-menu-item>
         Instrucciones Libreta</a>
     </mat-card>
