master - more code

--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -14,6 +14,10 @@
         <a href='https://drive.google.com/file/d/1LYlIs--LPWiA-SaU9Jk6SF5Rc5FyVn1x/view?usp=drive_link'
         mat-menu-item>
         Instrucciones Libreta</a>
+        <a href='https://docs.google.com/document/d/1CaAFRGCPyxhfLDtJZvqBvJ6lh3a5sxr9/edit?usp=sharing&ouid=103201391362993953479&rtpof=true&sd=true'
+        mat-menu-item>
+        Como sobrevivir al vuelo a vela</a>
+        
     </mat-card>
 
 </mat-card>
