--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,5 +1,5 @@
 <mat-grid-list [cols]="breakpoint" rowHeight="1:1" (window:resize)="onResize($event)">
-    <mat-grid-tile class="title">Centro de vuelo en Dinamica</mat-grid-tile>
+    <mat-grid-tile class="title">Sitio de informacion</mat-grid-tile>
     <mat-grid-tile >
         <img mat-card-image src='./assets/logo.png' alt="Logo"/>
     </mat-grid-tile>
