--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -4,7 +4,7 @@
   <mat-menu #menu="matMenu">
     <button mat-menu-item routerLink="/">Bienvenidos</button>
     <button mat-menu-item routerLink="/informacion">Informacion</button>
-    <button mat-menu-item routerLink="/planeadores">Planeadores</button>
+    <button mat-menu-item routerLink="/aeronaves">Aeronaves</button>
   </mat-menu>
     
   <a mat-button class="buttonName text" routerLink="/">
@@ -15,7 +15,7 @@
   <div class="hide-display-mobile text">
     <a mat-button routerLink="/">Bienvenidos</a>
     <a mat-button routerLink="/informacion">Informacion</a>
-    <a mat-button routerLink="/planeadores">Planeadores</a>
+    <a mat-button routerLink="/aeronaves">Aeronaves</a>
   </div>
   
 </mat-toolbar>
