--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -4,7 +4,7 @@
         <img mat-card-image src='./assets/logo.png' alt="Logo"/>
     </mat-grid-tile>
     <mat-grid-tile>
-        <img style="margin: 50px;" mat-card-image src='./assets/field.png' alt="map"/>
+        <img style="margin: 50px; width: 90vw;" mat-card-image src='./assets/field.png' alt="map"/>
     </mat-grid-tile>
     <mat-grid-tile>
         <div class="display-flex">
