--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,4 +1,5 @@
 <mat-toolbar class="example-footer">
-    Fuerte Independencia 94, Tandil, Provincia de Buenos Aires <br>
-    Teléfono: 0249 443-2633
+    <div class="footer-contents">
+        <p>2023 Tandil, Provincia de Buenos Aires</p>
+    </div>
 </mat-toolbar>
