--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -1,44 +1,58 @@
+<mat-card>
     <mat-card>
         <h2>Documentacion para pilotos</h2>
         <a href='https://www.argentina.gob.ar/sites/default/files/manual-de-instruccion-de-vuelo-a-vela-1.pdf'
             mat-menu-item>
             Manual de Instrucción
             de Vuelo a Vela - Favav </a>
-        <a href='https://drive.google.com/file/d/1dYa1O2nQL5PW4fUpBOrzSwkQoMTY0Dxz/view?usp=drive_link'
-        mat-menu-item>
-        Reglamento de vuelo club de planeadores Tandil</a>
-        <a href='https://drive.google.com/file/d/1qhckW0RjmD82cZaAHIYfyODImj2PlNRF/view?usp=drive_link'
-        mat-menu-item>
-        Tabla de conversion horas</a>
-        <a href='https://drive.google.com/file/d/1LYlIs--LPWiA-SaU9Jk6SF5Rc5FyVn1x/view?usp=drive_link'
-        mat-menu-item>
-        Instrucciones Libreta</a>
+        <a href='https://drive.google.com/file/d/1dYa1O2nQL5PW4fUpBOrzSwkQoMTY0Dxz/view?usp=drive_link' mat-menu-item>
+            Reglamento de vuelo club de planeadores Tandil</a>
+        <a href='https://drive.google.com/file/d/1qhckW0RjmD82cZaAHIYfyODImj2PlNRF/view?usp=drive_link' mat-menu-item>
+            Tabla de conversion horas</a>
+        <a href='https://drive.google.com/file/d/1LYlIs--LPWiA-SaU9Jk6SF5Rc5FyVn1x/view?usp=drive_link' mat-menu-item>
+            Instrucciones Libreta</a>
         <a href='https://docs.google.com/document/d/1CaAFRGCPyxhfLDtJZvqBvJ6lh3a5sxr9/edit?usp=sharing&ouid=103201391362993953479&rtpof=true&sd=true'
-        mat-menu-item>
-        Como sobrevivir al vuelo a vela</a>     
+            mat-menu-item>
+            Como sobrevivir al vuelo a vela</a>
     </mat-card>
     <mat-card>
-        <a href='https://www.argentina.gob.ar/anac'
-        mat-menu-item>
-        Anac</a>  
-        <a href='https://www.anac.gov.ar/anac/web/uploads/normativa/raac/raac_vigentes/por_parte/parte-61-10_ago_2015.pdf'
-        mat-menu-item>
-        RAAC 61</a>  
-        <a href='https://www.argentina.gob.ar/sites/default/files/raac_91.pdf'
-        mat-menu-item>
-        RAAC 91</a>    
+        <h2>Anac</h2>
+        <a href='https://www.argentina.gob.ar/anac' mat-menu-item>
+            Acceso al sitio web</a>
+        <h2>Raac Anac</h2>
+            <a href='https://www.anac.gov.ar/anac/web/uploads/normativa/raac/raac_vigentes/por_parte/parte-61-10_ago_2015.pdf'
+            mat-menu-item>
+            RAAC 61</a>
+        <a href='https://www.argentina.gob.ar/sites/default/files/raac_91.pdf' mat-menu-item>
+            RAAC 91</a>
         <a href='http://www.anac.gov.ar/anac/web/uploads/normativa/raac/raac_vigentes/por_parte/parte-141.pdf'
-        mat-menu-item>
-        RAAC 141</a>       
+            mat-menu-item>
+            RAAC 141</a>
     </mat-card>
-<mat-card>
+    <mat-card>
+        <h2>Notam</h2>
+        <a href='http://ais.anac.gov.ar/notam' mat-menu-item>
+            Acceso al sitio web</a>
+        <p>El club de planeadores Tandil aparece en la lista como:</p>
+        <p>TANDIL/COMANDANTE EDUARDO A. OLIVERO</p>
+        <p>Si no aparece en la lista significa que no hay notams activos.</p>
+    </mat-card>
 
-    <h2>Vuelos Bautismo</h2>
+    <mat-card>
+        <h2>Favav</h2>
+        <a href=' https://www.favav.com.ar/w9/default.aspx' mat-menu-item>
+            Acceso al sitio web de la Federacion Argentina de Vuelo a Vela</a>
+    </mat-card>
+   
+    <mat-card>
+        <h2>Vuelos Bautismo</h2>
 
-    <p> Los vuelos de bautismo se realizan los sábados, domingos y feriados ( se abona en efectivo o por transferencia).
-        No hace falta reservar, solo tenés que acercarte al club a partir de las 14 hs, es por orden de llegada!
-    </p>
-    <p> Esta es la ubicación del campo de vuelo:
-        <a href=" https://bit.ly/2BuMFt0"> https://bit.ly/2BuMFt0</a>
-    </p>
+        <p> Los vuelos de bautismo se realizan los sábados, domingos y feriados ( se abona en efectivo o por
+            transferencia).
+            No hace falta reservar, solo tenés que acercarte al club a partir de las 14 hs, es por orden de llegada!
+        </p>
+        <p> Esta es la ubicación del campo de vuelo:
+            <a href=" https://bit.ly/2BuMFt0"> https://bit.ly/2BuMFt0</a>
+        </p>
+    </mat-card>
 </mat-card>
