master - more code

--- a/src/app/pages/fly-with-us/fly-with-us.component.scss
+++ b/src/app/pages/fly-with-us/fly-with-us.component.scss
@@ -1,7 +1,7 @@
 mat-card{ 
     margin: 10px;
     mat-card{
-        background-color: #0000001f;
+        background-color: #efefff1f;;
         margin: 1rem;
         padding: 0.5rem;
         img{
