master - more code

--- a/src/app/pages/fly-with-us/fly-with-us.component.scss
+++ b/src/app/pages/fly-with-us/fly-with-us.component.scss
@@ -1,11 +1,14 @@
-mat-card{ 
+mat-card {
     margin: 10px;
-    mat-card{
-        background-color: #efefff1f;;
+
+    mat-card {
+        background-color: #efefff1f;
+        ;
         margin: 1rem;
         padding: 0.5rem;
-        img{
+
+        img {
             width: 200px;
         }
-    }    
+    }
 }
