--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -2,8 +2,6 @@ p {
   font-family: 'Open Sans', sans-serif;
   font-size: 120%;
 }
-mat-grid-tile {
-}
 
 .title{
     font-family: fantasy;
@@ -20,4 +18,10 @@ mat-grid-tile {
 
 .icon-size{
     font-size: 1vw;
+}
+
+.map-card{
+    width: 95%;
+    height: fit-content;
+    padding: 10px;
 }
