master - more code

--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<div>
     <mat-card>
         <h2>Documentacion para pilotos</h2>
         <a href='https://www.argentina.gob.ar/sites/default/files/manual-de-instruccion-de-vuelo-a-vela-1.pdf'
@@ -55,4 +55,4 @@
             <a href=" https://bit.ly/2BuMFt0"> https://bit.ly/2BuMFt0</a>
         </p>
     </mat-card>
-</mat-card>
+</div>
