--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
   <button class="hide-display-desktop" mat-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon></button>
   <mat-menu #menu="matMenu">
-    <button mat-menu-item routerLink="/">Bienvenidos</button>
+    <button mat-menu-item routerLink="/">Inicio</button>
     <button mat-menu-item routerLink="/informacion">Informacion</button>
     <button mat-menu-item routerLink="/aeronaves">Aeronaves</button>
   </mat-menu>
@@ -13,7 +13,7 @@
   <span class="spacer"></span>
 
   <div class="hide-display-mobile text">
-    <a mat-button routerLink="/">Bienvenidos</a>
+    <a mat-button routerLink="/">Inicio</a>
     <a mat-button routerLink="/informacion">Informacion</a>
     <a mat-button routerLink="/aeronaves">Aeronaves</a>
   </div>
