--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,8 +1,8 @@
+<div class="background-main">
+    <img class="logo-centered" src="assets/Logo-CPT-Twin.svg">
+    <h1 class="title">Volando entre las sierras desde 1936</h1>
+</div>
 <mat-grid-list [cols]="breakpoint" rowHeight="1:1" (window:resize)="onResize($event)">
-    <mat-grid-tile class="title">Sitio de informacion</mat-grid-tile>
-    <mat-grid-tile>
-        <img mat-card-image src='./assets/logo.png' alt="Logo" />
-    </mat-grid-tile>
     <mat-grid-tile>
         <mat-card class="map-card">
             <img mat-card-image src='./assets/field.png' alt="map" />
@@ -23,8 +23,12 @@
             </svg>
             /clubdeplaneadorestandil
             <p></p>
-            <svg fill="#000000" height="2rem" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330.001 330.001" xml:space="preserve"><path id="XMLID_350_" d="M173.871,177.097c-2.641,1.936-5.756,2.903-8.87,2.903c-3.116,0-6.23-0.967-8.871-2.903L30,84.602 L0.001,62.603L0,275.001c0.001,8.284,6.716,15,15,15L315.001,290c8.285,0,15-6.716,15-14.999V62.602l-30.001,22L173.871,177.097z"/><polygon id="XMLID_351_" points="165.001,146.4 310.087,40.001 19.911,40 	"/>
-       </svg>            clubplaneadores.tandil@gmail.com
+            <svg fill="#000000" height="2rem" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 330.001 330.001" xml:space="preserve">
+                <path id="XMLID_350_"
+                    d="M173.871,177.097c-2.641,1.936-5.756,2.903-8.87,2.903c-3.116,0-6.23-0.967-8.871-2.903L30,84.602 L0.001,62.603L0,275.001c0.001,8.284,6.716,15,15,15L315.001,290c8.285,0,15-6.716,15-14.999V62.602l-30.001,22L173.871,177.097z" />
+                <polygon id="XMLID_351_" points="165.001,146.4 310.087,40.001 19.911,40 	" />
+            </svg> clubplaneadores.tandil@gmail.com
         </div>
     </mat-grid-tile>
 </mat-grid-list>
