master - more code

--- a/src/app/pages/gliders/glider/glider.component.html
+++ b/src/app/pages/gliders/glider/glider.component.html
@@ -2,7 +2,7 @@
     <app-glider-sidenav></app-glider-sidenav>
     <mat-card>
         <h1>
-            {{glider.description}} -
+            {{glider.model}} -
             {{glider.designator}}
         </h1>
         <img mat-card-image src={{glider.image}} alt="Card image" onError="this.src='./assets/logo.png'" />
