--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" class="toolbar">
   <button class="hide-display-desktop" mat-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon></button>
   <mat-menu #menu="matMenu">
