--- a/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.css
+++ b/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.css
@@ -1,13 +1,9 @@
 .container {
     float: left;
-    width: fit-content;
-    height: 95vh;
-    margin-right: 15px;
+    height: 100vh;
     z-index: 0;
 }
 
-.scroller {
-    width: 100%;
-    height: 100%;
-    overflow-y: scroll;
+.text-size{
+    font-size: 1em !important;
 }
