--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -4,11 +4,9 @@ p {
 }
 
 .display-flex{
+    display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    align-content: space-around;
-    flex-wrap: nowrap;
+    align-items: flex-start;
 }
 
 .icon-size{
