--- a/src/app/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/shared/components/toolbar/toolbar.component.scss
@@ -34,3 +34,8 @@ a {
         display: none;
     }
 }
+
+.toolbar{
+    background: rgb(46,59,131);
+    background: linear-gradient(0deg, rgba(46,59,131,1) 0%, rgba(63,81,181,1) 20%, rgba(63,81,181,1) 100%);
+}
