--- a/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.html
+++ b/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.html
@@ -1,10 +1,15 @@
 <mat-sidenav-container class="container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
-        <mat-sidenav #snav [mode]="mobileQuery.matches ? 'over' : 'side'" [fixedInViewport]="mobileQuery.matches"
-                fixedTopGap="56" [opened]="!mobileQuery.matches">
-                <mat-nav-list>
-                        <a mat-list-item routerLink="/aeronaves/{{glider.designator}}"
-                                *ngFor="let glider of gliderArray">{{glider.model}} -
-                                {{glider.designator}}</a>
-                </mat-nav-list>
-        </mat-sidenav>
+  <mat-sidenav
+    #snav
+    [mode]="mobileQuery.matches ? 'over' : 'side'"
+    [fixedInViewport]="mobileQuery.matches"
+    fixedTopGap="56"
+    [opened]="!mobileQuery.matches"
+  >
+    <mat-nav-list>
+      <a mat-list-item routerLink="/aeronaves/{{ glider.designator }}" *ngFor="let glider of gliderArray"
+        >{{ glider.model }} - {{ glider.designator }}</a
+      >
+    </mat-nav-list>
+  </mat-sidenav>
 </mat-sidenav-container>
