--- a/src/app/pages/gliders/info-card-container/info-card-container.component.html
+++ b/src/app/pages/gliders/info-card-container/info-card-container.component.html
@@ -1,6 +1,4 @@
 <app-glider-sidenav></app-glider-sidenav>
 <div class="info-cards">
-        <app-info-card *ngFor="let glider of gliderArray" [title]="glider.model" [subtitle]="glider.designator"
-                [image]="glider.image">
-        </app-info-card>
+  <app-info-card *ngFor="let glider of gliderArray" [title]="glider.model" [subtitle]="glider.designator" [image]="glider.image"> </app-info-card>
 </div>
