--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,15 +1,14 @@
 <mat-toolbar color="primary" class="toolbar">
   <button class="hide-display-desktop" mat-button [matMenuTriggerFor]="menu">
-    <mat-icon>menu</mat-icon></button>
+    <mat-icon>menu</mat-icon>
+  </button>
   <mat-menu #menu="matMenu">
     <button mat-menu-item routerLink="/">Inicio</button>
     <button mat-menu-item routerLink="/informacion">Informacion</button>
     <button mat-menu-item routerLink="/aeronaves">Aeronaves</button>
   </mat-menu>
 
-  <a mat-button class="buttonName text" routerLink="/">
-    Club de Planeadores Tandil
-  </a>
+  <a mat-button class="buttonName text" routerLink="/"> Club de Planeadores Tandil </a>
   <span class="spacer"></span>
 
   <div class="hide-display-mobile text">
@@ -17,5 +16,4 @@
     <a mat-button routerLink="/informacion">Informacion</a>
     <a mat-button routerLink="/aeronaves">Aeronaves</a>
   </div>
-
 </mat-toolbar>
