--- a/src/app/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/shared/components/toolbar/toolbar.component.scss
@@ -36,6 +36,5 @@ a {
 }
 
 .toolbar {
-  background: rgb(46, 59, 131);
-  background: linear-gradient(0deg, rgba(46, 59, 131, 1) 0%, rgba(63, 81, 181, 1) 20%, rgba(63, 81, 181, 1) 100%);
+  background: rgb(207 129 72);
 }
