--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,6 +1,7 @@
 <div class="background-main">
-  <img class="logo-centered" src="assets/Logo-CPT-Twin.svg" />
   <h1 class="title">Volando entre las sierras desde 1936</h1>
+
+  <img class="logo-centered" src="./assets/Logo-CPT-Twin.svg" />
 </div>
 <mat-grid-list [cols]="breakpoint" rowHeight="1.5:1" (window:resize)="onResize($event)">
   <mat-grid-tile>
