--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -25,7 +25,7 @@ p {
 }
 
 .background-main {
-  background-image:linear-gradient(0deg,rgba(255,255,255,1) 3%, rgba(255,255,255,0.7) 6%, rgba(255,255,255,0) 9%),url("/assets/fondo.jpg");
+  background-image:linear-gradient(0deg,rgba(255,255,255,1) 3%, rgba(255,255,255,0.7) 6%, rgba(255,255,255,0) 9%),url("https://drive.google.com/uc?id=19t9aZiEGeU2Pxg_BaTnPLMIqDEhEvf1x");
   background-position: center; 
   background-repeat: no-repeat;
   background-size: cover;
