--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -1,79 +1,41 @@
-p {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 120%;
-}
-
-.display-flex {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: flex-start;
-  justify-content: center
-}
-
-
-.icon-size {
-  font-size: 1vw;
-}
-
-.map-card {
-  width: 95%;
-  height: 100%;
-  padding: 10px;
-}
-
-.media-card{
-  padding: 2rem;
-  width: 95%;
-  height: 100%;
-}
-
-.media-text{
-  font-family: fantasy;
-  font-size: 2rem;
-}
-
-.logo-centered {
-  height: 30vh;
-  max-width: 70vw;
-}
-
-
-
 @media only screen and (min-width: 951px) {
-  .social-media-container{
-    margin-top: 4rem;
-    margin-left: 25%;
+  div{
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    app-image-parallax{
+      width: 100vw;
+    }
+    app-map-card {
+      margin: 10px;
+      width: 90vw;
+    }
+    app-social-card {
+      margin: 10px;
+      width: 90vw;
+    }
   }
 }
 
 @media only screen and (max-width: 950px) {
-  .social-media-container{
-    margin-top: 4rem;
+  div{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    align-items: center;
+    app-image-parallax{
+      width: 100vw;
+    }
+    app-map-card {
+      margin: 10px;
+      width: 90vw;
+    }
+    app-social-card {
+      margin: 10px;
+      width: 90vw;
+    }
   }
 }
-
-.background-main {
-  background-image:linear-gradient(0deg,rgba(255,255,255,1) 3%, rgba(255,255,255,0.7) 6%, rgba(255,255,255,0) 9%),url("https://drive.google.com/uc?id=19t9aZiEGeU2Pxg_BaTnPLMIqDEhEvf1x");
-  background-position: center; 
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 40vh;
-  background-size: cover;
-  color: white;
-  padding: 20px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
-}
-
-.subtitle-text{
-  font-family: fantasy;
-  font-size: 2rem;
-  color: #606060;
-}
-
-
-
