feature-new-view changes to view

--- a/src/app/pages/fly-with-us/fly-with-us.component.scss
+++ b/src/app/pages/fly-with-us/fly-with-us.component.scss
@@ -3,7 +3,7 @@ mat-card {
   right: 10vw;
   max-width: 80vw;
   justify-content: center;
-  background-color: #efefff1f;
+  background-color: lightgrey;
   margin: 1rem 0 1rem 0;
   padding: 0.5rem;
   img {
