--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -1,5 +1,6 @@
 <app-image-parallax></app-image-parallax>
 <div>
-  <app-map-card></app-map-card>
+  <app-button-menu></app-button-menu>
   <app-social-card></app-social-card>
+  <app-map-card></app-map-card>
 </div>
