--- a/src/app/pages/welcome/map-card/map-card.component.scss
+++ b/src/app/pages/welcome/map-card/map-card.component.scss
@@ -1,10 +1,10 @@
-mat-card{
+mat-card {
+  background-color: lightgrey;
+  align-items: center;
+  justify-content: center;
   padding: 10px;
-  img{
-    width: 100%;
-    height: 90%;
-  }
-  p{
-    font-family: fantasy;
+  img {
+    width: 40%;
+    height: 40%;
   }
 }
