--- a/src/app/pages/welcome/social-card/social-card.component.scss
+++ b/src/app/pages/welcome/social-card/social-card.component.scss
@@ -1,18 +1,9 @@
-mat-card{
+mat-card {
+  background-color: lightgrey;
   padding: 10px;
-  font-family: fantasy;
-  h1{
-    text-align: center;
-  }
-  .social-media-container{
-    max-height: 50vh;
-    max-width: 50vw;
-    margin: 2rem;
-    font-size: 2vw;
-    svg{
-      height: 4rem;
-      width: 4rem;
-      margin: 0 20px 0 20px;
-    }
+  align-items: center;
+  justify-content: center;
+  a {
+    margin: 10px;
   }
 }
