--- a/src/app/pages/gliders/info-card/info-card.component.scss
+++ b/src/app/pages/gliders/info-card/info-card.component.scss
@@ -1,5 +1,5 @@
 mat-card {
-  background-color: lightgrey;
+  background: #878e914a;
   margin: 15px;
   max-width: fit-content;
   max-height: fit-content;
