--- a/src/app/pages/welcome/button-menu/button-menu.component.html
+++ b/src/app/pages/welcome/button-menu/button-menu.component.html
@@ -1,4 +1,12 @@
 <mat-card>
-  <button mat-raised-button color="primary" routerLink="/informacion">Documentacion</button>
-  <button mat-raised-button color="primary" routerLink="/aeronaves">Aeronaves</button>
+  <div>
+    <h1>Informacion variada de distintas fuentes</h1>
+    <button mat-raised-button color="primary" routerLink="/informacion">Documentacion</button>
+  </div>
+</mat-card>
+<mat-card>
+  <div>
+    <h1>Manuales e informacion de las aeronaves del club</h1>
+    <button mat-raised-button color="primary" routerLink="/aeronaves">Aeronaves</button>
+  </div>
 </mat-card>
