--- a/src/app/pages/welcome/image-parallax/image-parallax.component.html
+++ b/src/app/pages/welcome/image-parallax/image-parallax.component.html
@@ -1,4 +1,4 @@
-<div appParallax [factor]="9">
-  <img class="parallax-background" src="./assets/fondo.jpg" />
+<div>
+  <h1>Sitio de informacion</h1>
   <img class="logo-centered" src="./assets/Logo-CPT-Twin.svg" />
 </div>
