--- a/src/app/pages/welcome/map-card/map-card.component.scss
+++ b/src/app/pages/welcome/map-card/map-card.component.scss
@@ -1,5 +1,5 @@
 mat-card {
-  background-color: lightgrey;
+  background: #878e914a;
   align-items: center;
   justify-content: center;
   padding: 10px;
