--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary" class="toolbar">
+<mat-toolbar color="accent" class="toolbar">
   <button class="hide-display-desktop" mat-button [matMenuTriggerFor]="menu">
     <mat-icon>menu</mat-icon>
   </button>
