--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-toolbar></app-toolbar>
-<router-outlet></router-outlet>
-<app-scroll-to-top></app-scroll-to-top>
+<div>
+  <app-toolbar></app-toolbar>
+  <router-outlet></router-outlet>
+  <app-scroll-to-top></app-scroll-to-top>
+</div>
