--- a/src/app/pages/fly-with-us/fly-with-us.component.html
+++ b/src/app/pages/fly-with-us/fly-with-us.component.html
@@ -1,5 +1,6 @@
 <div>
   <h1>En esta pagina se recopila informacion de utilidad para el piloto</h1>
+  <app-map-card></app-map-card>
   <mat-card>
     <h2>Documentacion para pilotos</h2>
     <a href="https://www.argentina.gob.ar/sites/default/files/manual-de-instruccion-de-vuelo-a-vela-1.pdf" mat-menu-item>
