--- a/src/app/pages/welcome/button-menu/button-menu.component.scss
+++ b/src/app/pages/welcome/button-menu/button-menu.component.scss
@@ -1,9 +1,18 @@
 mat-card {
-  background-color: lightgrey;
+  background: #878e914a;
   display: flex;
-  flex-wrap: nowrap;
-  flex-direction: row;
-  button {
-    margin: 10px;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: flex-start;
+  margin: 10px;
+  padding: 10px;
+  div {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    button {
+      margin: 10px;
+      color: white;
+    }
   }
 }
