--- a/src/app/pages/welcome/image-parallax/image-parallax.component.scss
+++ b/src/app/pages/welcome/image-parallax/image-parallax.component.scss
@@ -1,20 +1,19 @@
-div{
+div {
+  height: 40vh;
   display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: stretch;
+  justify-content: space-evenly;
   align-items: center;
-  justify-content: center;
-  width: 100% !important;
-  .parallax-background{
-    width: 100%;
-    height: 40vh;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
+  align-content: space-around;
   .logo-centered {
-    position: fixed;
-    height: 30vh;
-    max-width: 70vw;
+    width: 20rem;
+  }
+}
+
+@media only screen and (max-width: 951px) {
+  h1 {
+    display: none;
   }
 }
