--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,31 +1,111 @@
 @use '@angular/material' as mat;
 
+// Be sure that you only ever include this mixin once!
 @include mat.core();
 
-$my-app-primary: mat.define-palette(mat.$indigo-palette);
-$my-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$my-app-warn: mat.define-palette(mat.$red-palette);
+// Define your theme with color palettes, typography and density
 
-$my-app-theme: mat.define-light-theme(
+$mat-theme-primary-palette: map-merge(
+  mat.$green-palette,
+  (
+    contrast: (
+      100: #150c4a,
+    ),
+  )
+);
+$mat-theme-primary: mat.define-palette($mat-theme-primary-palette, $default: 100, $lighter: 100, $darker: 700, $text: 500);
+
+$mat-theme-accent-palette: map-merge(
+  mat.$teal-palette,
+  (
+    501: #4d77b6,
+    contrast: (
+      501: white,
+      A100: white,
+      A200: white,
+    ),
+  )
+);
+$mat-theme-accent: mat.define-palette($mat-theme-accent-palette, $default: 501, $lighter: A100, $darker: A200, $text: 600);
+
+$mat-theme-warn-palette: map-merge(mat.$pink-palette, ());
+$mat-theme-warn: mat.define-palette($mat-theme-warn-palette, $default: A200, $lighter: 500, $darker: 500, $text: A700);
+
+$mat-dark-theme-primary-palette: map-merge(
+  mat.$light-green-palette,
+  (
+    contrast: (
+      200: #030844,
+      A100: rgba(0, 0, 0, 0.87),
+      A700: rgba(0, 0, 0, 0.87),
+    ),
+  )
+);
+$mat-dark-theme-primary: mat.define-palette($mat-dark-theme-primary-palette, $default: 200, $lighter: A100, $darker: A700, $text: 700);
+
+$mat-dark-theme-accent-palette: map-merge(
+  mat.$green-palette,
+  (
+    contrast: (
+      A200: black,
+      50: black,
+      A400: black,
+    ),
+  )
+);
+$mat-dark-theme-accent: mat.define-palette($mat-dark-theme-accent-palette, $default: A200, $lighter: 50, $darker: A400, $text: A100);
+
+$mat-dark-theme-warn-palette: map-merge(
+  mat.$pink-palette,
+  (
+    contrast: (
+      A100: black,
+      100: white,
+    ),
+  )
+);
+$mat-dark-theme-warn: mat.define-palette($mat-dark-theme-warn-palette, $default: A100, $lighter: 100, $darker: A700, $text: 100);
+
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@300&display=swap');
+
+$mat-density: 0;
+
+$mat-core-theme: mat.define-light-theme(
   (
     color: (
-      primary: $my-app-primary,
-      accent: $my-app-accent,
-      warn: $my-app-warn,
+      primary: $mat-theme-primary,
+      accent: $mat-theme-accent,
+      warn: $mat-theme-warn,
+    ),
+    density: $mat-density,
+  )
+);
+
+$mat-dark-theme: mat.define-dark-theme(
+  (
+    color: (
+      primary: $mat-dark-theme-primary,
+      accent: $mat-dark-theme-accent,
+      warn: $mat-dark-theme-warn,
     ),
   )
 );
 
-@include mat.all-component-themes($my-app-theme);
+@include mat.all-component-themes($mat-core-theme);
+
+.dark-theme {
+  @include mat.all-component-colors($mat-dark-theme);
+}
 
 html,
 body {
   height: 100%;
+  font-family: 'Archivo';
+  color: white;
 }
 body {
   margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
-  background-color: #b3c7b1;
+  background: #878e914a;
 }
 
 /*this hiddes the scrollbar on desktop mode
