--- a/src/app/pages/gliders/info-card/info-card.component.scss
+++ b/src/app/pages/gliders/info-card/info-card.component.scss
@@ -1,13 +1,20 @@
 mat-card {
-  background: #878e914a;
   margin: 15px;
   max-width: fit-content;
   max-height: fit-content;
   img {
     width: 20rem;
     height: 20rem;
+    opacity: 0.8;
+  }
+
+  img:hover {
+    width: 20rem;
+    height: 20rem;
+    opacity: 1;
   }
   mat-card-title {
+    color: black;
     margin-left: 2px;
   }
   mat-card-subtitle {
