--- a/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.html
+++ b/src/app/pages/gliders/glider-sidenav/glider-sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="container" [style.marginTop.px]="mobileQuery.matches ? 56 : 0">
+<mat-sidenav-container>
   <mat-sidenav
     #snav
     [mode]="mobileQuery.matches ? 'over' : 'side'"
