--- a/src/app/pages/gliders/info-card-container/info-card-container.component.scss
+++ b/src/app/pages/gliders/info-card-container/info-card-container.component.scss
@@ -1,8 +1,19 @@
-.info-cards {
+mat-drawer-container {
+  width: 100vw;
   height: 100vh;
-  overflow-y:auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
+  margin: 10px;
+  background: #878e914a;
+  mat-drawer {
+    background: #878e914a;
+  }
+  mat-drawer-content {
+    .info-cards {
+      height: 100vh;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+  }
 }
