--- a/src/app/pages/welcome/welcome.component.scss
+++ b/src/app/pages/welcome/welcome.component.scss
@@ -2,13 +2,13 @@ div {
   display: flex;
   flex-direction: column;
   align-content: center;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   app-image-parallax {
     width: 100vw;
   }
   app-social-card {
-    margin: 10px;
+    margin: 5rem;
     width: 80vw;
   }
   app-map-card {
