--- a/src/app/pages/page-not-found/page-not-found.component.html
+++ b/src/app/pages/page-not-found/page-not-found.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<div>
   <h1>Termica no encontrada</h1>
-  <button mat-menu-item routerLink="/">Volver al inicio</button>
-</mat-card>
+  <button mat-raised-button color="primary" routerLink="/">Volver al inicio</button>
+</div>
