--- a/src/app/pages/fly-with-us/fly-with-us.component.scss
+++ b/src/app/pages/fly-with-us/fly-with-us.component.scss
@@ -1,18 +1,28 @@
 div {
-  background-color: #878e91ec;
+  margin: 10px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: stretch;
   mat-card {
-    left: 10vw;
-    right: 10vw;
-    max-width: 80vw;
     justify-content: center;
     background: #878e914a;
     margin: 1rem 0 1rem 0;
     padding: 0.5rem;
-    img {
-      width: 200px;
+    div {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      a {
+        text-decoration: none;
+        margin: 10px;
+        width: 400px;
+        display: flex;
+        text-align: center;
+      }
     }
   }
-
   h1 {
     margin: 10px;
   }
