--- a/src/app/pages/page-not-found/page-not-found.component.scss
+++ b/src/app/pages/page-not-found/page-not-found.component.scss
@@ -1,6 +1,6 @@
 div {
   display: flex;
-  justify-content: space-around;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
